--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 100px;
     box-shadow: inset 0 0 20px;
 }
-img {
+.heading img {
     float:left; /* Выравнивание по левому краю */
     text-align: end;
     margin: 10px 50px 10px 10px;
@@ -38,4 +38,13 @@ h3 {
     border: 1px solid #000;
     padding: 10px;
     font-weight: 600;
+}
+footer {
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 30px;
+    font-family: 'Times New Roman', Times, serif
+    font-size: 20px;
+    font-weight: bold;
+    
 }
